Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -18,13 +18,13 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
-hostname cv-pathfinder-edge3
+hostname cv-pathfinder-transit1B
 !
 router adaptive-virtual-topology
-   topology role edge
+   topology role transit region
    region AVD_Land_West id 42
    zone DEFAULT-ZONE id 1
-   site Site423 id 423
+   site Site422 id 422
    !
    policy DEFAULT-AVT-POLICY
       !
@@ -56,6 +56,14 @@ router adaptive-virtual-topology
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
+   policy TRANSIT-AVT-POLICY
+      !
+      match application-profile VOICE
+         avt profile TRANSIT-AVT-POLICY-VOICE
+      !
+      match application-profile default
+         avt profile TRANSIT-AVT-POLICY-DEFAULT
+   !
    profile CONTROL-PLANE-PROFILE
       path-selection load-balance LB-CONTROL-PLANE-PROFILE
    !
@@ -74,6 +82,12 @@ router adaptive-virtual-topology
    profile PROD-AVT-POLICY-VOICE
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
+   profile TRANSIT-AVT-POLICY-DEFAULT
+      path-selection load-balance LB-TRANSIT-AVT-POLICY-DEFAULT
+   !
+   profile TRANSIT-AVT-POLICY-VOICE
+      path-selection load-balance LB-TRANSIT-AVT-POLICY-VOICE
+   !
    vrf default
       avt policy DEFAULT-AVT-POLICY-WITH-CP
       avt profile DEFAULT-AVT-POLICY-DEFAULT id 1
@@ -90,26 +104,40 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+   !
+   vrf TRANSIT
+      avt policy TRANSIT-AVT-POLICY
+      avt profile TRANSIT-AVT-POLICY-DEFAULT id 1
+      avt profile TRANSIT-AVT-POLICY-VOICE id 42
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
    !
+   path-group INET id 101
+      ipsec profile CP-PROFILE
+      !
+      local interface Ethernet1.42
+         stun server-profile INET-cv-pathfinder-pathfinder-Ethernet1 INET-cv-pathfinder-pathfinder-Ethernet3
+      !
+      peer dynamic
+      !
+      peer static router-ip 192.168.144.1
+         name cv-pathfinder-pathfinder
+         ipv4 address 10.7.7.7
+         ipv4 address 10.9.9.9
+   !
    path-group LAN_HA id 65535
-      ipsec profile DP-PROFILE
       flow assignment lan
       !
       local interface Ethernet52
       !
-      local interface Ethernet53
-      !
-      peer static router-ip 192.168.142.2
+      peer static router-ip 192.168.143.1
          name LAN_HA
-         ipv4 address 172.17.0.5
-         ipv4 address 172.17.0.7
+         ipv4 address 172.17.0.1
    !
    path-group MPLS id 100
       !
-      local interface Ethernet2
+      local interface Ethernet2.42
          stun server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
       !
       peer dynamic
@@ -119,18 +147,22 @@ router path-selection
          ipv4 address 172.16.0.1
    !
    load-balance policy LB-CONTROL-PLANE-PROFILE
+      path-group INET
       path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
+      path-group INET
       path-group LAN_HA
       path-group MPLS priority 42
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
+      path-group INET
       path-group LAN_HA
       path-group MPLS
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
+      path-group INET
       path-group LAN_HA
       path-group MPLS priority 2
    !
@@ -138,11 +170,23 @@ router path-selection
       loss-rate 42.0
       path-group LAN_HA
       path-group MPLS
+      path-group INET priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-VOICE
       jitter 42
       path-group LAN_HA
       path-group MPLS
+      path-group INET priority 2
+   !
+   load-balance policy LB-TRANSIT-AVT-POLICY-DEFAULT
+      path-group INET
+      path-group LAN_HA
+      path-group MPLS priority 2
+   !
+   load-balance policy LB-TRANSIT-AVT-POLICY-VOICE
+      path-group LAN_HA
+      path-group MPLS
+      path-group INET priority 2
 !
 spanning-tree mode none
 !
@@ -155,13 +199,15 @@ vrf instance MGMT
 !
 vrf instance PROD
 !
+vrf instance TRANSIT
+!
 ip security
    !
    ike policy DP-IKE-POLICY
-      local-id 192.168.142.3
+      local-id 192.168.143.2
    !
    ike policy CP-IKE-POLICY
-      local-id 192.168.142.3
+      local-id 192.168.143.2
    !
    sa policy DP-SA-POLICY
       esp encryption aes128
@@ -194,13 +240,28 @@ interface Dps1
    description DPS Interface
    mtu 9214
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 192.168.142.3/32
+   ip address 192.168.143.2/32
+!
+interface Ethernet1
+   no shutdown
+   no switchport
+!
+interface Ethernet1.42
+   no shutdown
+   encapsulation dot1q vlan 42
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address dhcp
+   dhcp client accept default-route
 !
 interface Ethernet2
    no shutdown
    no switchport
+!
+interface Ethernet2.42
+   no shutdown
+   encapsulation dot1q vlan 666
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 172.15.6.6/31
+   ip address 172.16.6.6/31
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
@@ -208,7 +269,7 @@ interface Ethernet52
    mtu 9214
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
-   ip address 172.17.0.9/31
+   ip address 172.17.0.3/31
 !
 interface Ethernet52.42
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.42_vrf_PROD
@@ -216,7 +277,7 @@ interface Ethernet52.42
    mtu 9214
    encapsulation dot1q vlan 42
    vrf PROD
-   ip address 172.17.0.9/31
+   ip address 172.17.0.3/31
 !
 interface Ethernet52.100
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.100_vrf_IT
@@ -224,44 +285,21 @@ interface Ethernet52.100
    mtu 9214
    encapsulation dot1q vlan 100
    vrf IT
-   ip address 172.17.0.9/31
-!
-interface Ethernet53
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2
-   no shutdown
-   mtu 9214
-   no switchport
-   flow tracker hardware WAN-FLOW-TRACKER
-   ip address 172.17.0.11/31
-!
-interface Ethernet53.42
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2.42_vrf_PROD
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 42
-   vrf PROD
-   ip address 172.17.0.11/31
-!
-interface Ethernet53.100
-   description P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2.100_vrf_IT
-   no shutdown
-   mtu 9214
-   encapsulation dot1q vlan 100
-   vrf IT
-   ip address 172.17.0.11/31
+   ip address 172.17.0.3/31
 !
 interface Loopback0
    description Router_ID
    no shutdown
-   ip address 192.168.42.3/32
+   ip address 192.168.43.2/32
 !
 interface Vxlan1
-   description cv-pathfinder-edge3_VTEP
+   description cv-pathfinder-transit1B_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
    vxlan vrf IT vni 100
    vxlan vrf PROD vni 42
+   vxlan vrf TRANSIT vni 66
 !
 application traffic recognition
    !
@@ -310,19 +348,18 @@ ip routing
 ip routing vrf IT
 no ip routing vrf MGMT
 ip routing vrf PROD
+ip routing vrf TRANSIT
 !
-ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
+ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 192.168.42.0/24 eq 32
+   seq 10 permit 192.168.43.0/24 eq 32
 !
 ip prefix-list PL-WAN-HA-PEER-PREFIXES
-   seq 10 permit 172.17.0.4/31
-   seq 20 permit 172.17.0.6/31
+   seq 10 permit 172.17.0.0/31
 !
 ip prefix-list PL-WAN-HA-PREFIXES
-   seq 10 permit 172.17.0.8/31
-   seq 20 permit 172.17.0.10/31
+   seq 10 permit 172.17.0.2/31
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
@@ -340,7 +377,7 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.42.2:423 additive
+   set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Advertise local routes towards LAN
@@ -356,7 +393,7 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   set extcommunity soo 192.168.42.2:423 additive
+   set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
@@ -370,13 +407,13 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.2:423 additive
+   set extcommunity soo 192.168.43.1:422 additive
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
-   router-id 192.168.42.3
+   router-id 192.168.43.2
    maximum-paths 16
    update wait-install
    no bgp default ipv4-unicast
@@ -394,12 +431,9 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS password 7 htm4AZe9mIQOO1uiMuGgYQ==
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
-   neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.8 remote-as 65000
-   neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2
-   neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.10 remote-as 65000
-   neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2
+   neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+   neighbor 172.17.0.2 remote-as 65000
+   neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
    redistribute connected route-map RM-CONN-2-BGP
@@ -426,35 +460,36 @@ router bgp 65000
       neighbor WAN-OVERLAY-PEERS activate
    !
    vrf default
-      rd 192.168.42.3:1
+      rd 192.168.43.2:1
       route-target import evpn 1:1
       route-target export evpn 1:1
       route-target export evpn route-map RM-EVPN-EXPORT-VRF-DEFAULT
    !
    vrf IT
-      rd 192.168.42.3:100
+      rd 192.168.43.2:100
       route-target import evpn 100:100
       route-target export evpn 100:100
-      router-id 192.168.42.3
-      neighbor 172.17.0.8 remote-as 65000
-      neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
-      neighbor 172.17.0.10 remote-as 65000
-      neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2.100_vrf_IT
+      router-id 192.168.43.2
+      neighbor 172.17.0.2 remote-as 65000
+      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
       redistribute connected
    !
    vrf PROD
-      rd 192.168.42.3:42
+      rd 192.168.43.2:42
       route-target import evpn 42:42
       route-target export evpn 42:42
-      router-id 192.168.42.3
-      neighbor 172.17.0.8 remote-as 65000
-      neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.8 description site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
-      neighbor 172.17.0.10 remote-as 65000
-      neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
-      neighbor 172.17.0.10 description site-ha-enabled-leaf2_Ethernet2.42_vrf_PROD
+      router-id 192.168.43.2
+      neighbor 172.17.0.2 remote-as 65000
+      neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
+      neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
+      redistribute connected
+   !
+   vrf TRANSIT
+      rd 192.168.43.2:66
+      route-target import evpn 66:66
+      route-target export evpn 66:66
+      router-id 192.168.43.2
       redistribute connected
 !
 router traffic-engineering
@@ -468,6 +503,10 @@ management api http-commands
 !
 stun
    client
+      server-profile INET-cv-pathfinder-pathfinder-Ethernet1
+         ip address 10.7.7.7
+      server-profile INET-cv-pathfinder-pathfinder-Ethernet3
+         ip address 10.9.9.9
       server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
          ip address 172.16.0.1
 !
