--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
@@ -1,8 +1,8 @@
-hostname: cv-pathfinder-transit
+hostname: cv-pathfinder-edge2A
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.43.1
+  router_id: 192.168.42.2
   bgp:
     default:
       ipv4_unicast: false
@@ -17,6 +17,9 @@ router_bgp:
     send_community: all
     route_map_in: RM-BGP-UNDERLAY-PEERS-IN
     route_map_out: RM-BGP-UNDERLAY-PEERS-OUT
+    allowas_in:
+      enabled: true
+      times: 1
   - name: WAN-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -26,10 +29,6 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 1
-    bfd_timers:
-      interval: 1000
-      min_rx: 1000
-      multiplier: 10
   address_family_ipv4:
     peer_groups:
     - name: IPv4-UNDERLAY-PEERS
@@ -39,6 +38,80 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
+  neighbors:
+  - ip_address: 172.17.0.4
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: site-ha-enabled-leaf2A
+    description: site-ha-enabled-leaf2A_Ethernet1
+  - ip_address: 172.17.0.6
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: site-ha-enabled-leaf2B
+    description: site-ha-enabled-leaf2B_Ethernet1
+  - ip_address: 192.168.144.1
+    peer_group: WAN-OVERLAY-PEERS
+    peer: cv-pathfinder-pathfinder
+    description: cv-pathfinder-pathfinder
+  vrfs:
+  - name: IT
+    router_id: 192.168.42.2
+    neighbors:
+    - ip_address: 172.17.0.4
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2A_Ethernet1.100_vrf_IT
+    - ip_address: 172.17.0.6
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2B_Ethernet1.100_vrf_IT
+    rd: 192.168.42.2:100
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 100:100
+      export:
+      - address_family: evpn
+        route_targets:
+        - 100:100
+    redistribute_routes:
+    - source_protocol: connected
+  - name: PROD
+    router_id: 192.168.42.2
+    neighbors:
+    - ip_address: 172.17.0.4
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2A_Ethernet1.42_vrf_PROD
+    - ip_address: 172.17.0.6
+      peer_group: IPv4-UNDERLAY-PEERS
+      remote_as: '65000'
+      description: site-ha-enabled-leaf2B_Ethernet1.42_vrf_PROD
+    rd: 192.168.42.2:42
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '42:42'
+    redistribute_routes:
+    - source_protocol: connected
+  - name: default
+    rd: 192.168.42.2:1
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '1:1'
+        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -65,69 +138,13 @@ router_bgp:
         receive: true
         send:
           any: true
-  neighbors:
-  - ip_address: 192.168.144.1
-    peer_group: WAN-OVERLAY-PEERS
-    peer: cv-pathfinder-pathfinder
-    description: cv-pathfinder-pathfinder
-  vrfs:
-  - name: default
-    rd: 192.168.43.1:1
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '1:1'
-        - route-map RM-EVPN-EXPORT-VRF-DEFAULT
-  - name: IT
-    router_id: 192.168.43.1
-    rd: 192.168.43.1:100
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-      export:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-    redistribute_routes:
-    - source_protocol: connected
-  - name: PROD
-    router_id: 192.168.43.1
-    rd: 192.168.43.1:42
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-    redistribute_routes:
-    - source_protocol: connected
-  - name: TRANSIT
-    router_id: 192.168.43.1
-    rd: 192.168.43.1:66
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 66:66
-      export:
-      - address_family: evpn
-        route_targets:
-        - 66:66
-    redistribute_routes:
-    - source_protocol: connected
 service_routing_protocols_model: multi-agent
 ip_routing: true
-transceiver_qsfp_default_mode_4x10: false
+vlan_internal_order:
+  allocation: ascending
+  range:
+    beginning: 1006
+    ending: 1199
 spanning_tree:
   mode: none
 vrfs:
@@ -139,44 +156,90 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
-- name: TRANSIT
-  tenant: TenantB
-  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
   enable_https: true
 ethernet_interfaces:
-- name: Ethernet1.42
-  peer_type: l3_interface
-  ip_address: dhcp
+- name: Ethernet52
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet1
+  peer_type: l3leaf
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 172.17.0.5/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
+- name: Ethernet52.100
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet1.100
+  peer_type: l3leaf
+  vrf: IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.100_vrf_IT
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 100
+  mtu: 9214
+  ip_address: 172.17.0.5/31
+- name: Ethernet52.42
+  peer: site-ha-enabled-leaf2A
+  peer_interface: Ethernet1.42
+  peer_type: l3leaf
+  vrf: PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2A_Ethernet1.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
+  mtu: 9214
+  ip_address: 172.17.0.5/31
+- name: Ethernet53
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet1
+  peer_type: l3leaf
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 172.17.0.7/31
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
+- name: Ethernet53.100
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet1.100
+  peer_type: l3leaf
+  vrf: IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.100_vrf_IT
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 100
+  mtu: 9214
+  ip_address: 172.17.0.7/31
+- name: Ethernet53.42
+  peer: site-ha-enabled-leaf2B
+  peer_interface: Ethernet1.42
+  peer_type: l3leaf
+  vrf: PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2B_Ethernet1.42_vrf_PROD
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 42
+  mtu: 9214
+  ip_address: 172.17.0.7/31
+- name: Ethernet1
+  peer_type: l3_interface
+  ip_address: dhcp
+  shutdown: false
+  type: routed
   dhcp_client_accept_default_route: true
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
-- name: Ethernet2.42
-  peer_type: l3_interface
-  ip_address: 172.16.6.6/31
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 666
-  flow_tracker:
-    hardware: WAN-FLOW-TRACKER
-- name: Ethernet1
-  type: routed
-  peer_type: l3_interface
-  shutdown: false
-- name: Ethernet2
-  type: routed
-  peer_type: l3_interface
-  shutdown: false
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.43.1/32
+  ip_address: 192.168.42.2/32
 as_path:
   access_lists:
   - name: ASPATH-WAN
@@ -187,7 +250,19 @@ prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
   - sequence: 10
-    action: permit 192.168.43.0/24 eq 32
+    action: permit 192.168.42.0/24 eq 32
+- name: PL-WAN-HA-PREFIXES
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.17.0.4/31
+  - sequence: 20
+    action: permit 172.17.0.6/31
+- name: PL-WAN-HA-PEER-PREFIXES
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.17.0.8/31
+  - sequence: 20
+    action: permit 172.17.0.10/31
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -196,14 +271,37 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.43.1:422 additive
+    - extcommunity soo 192.168.42.2:423 additive
+  - sequence: 50
+    type: permit
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
   - sequence: 40
     type: permit
     description: Mark prefixes originated from the LAN
     set:
-    - extcommunity soo 192.168.43.1:422 additive
+    - extcommunity soo 192.168.42.2:423 additive
+  - sequence: 10
+    type: permit
+    description: Allow WAN HA peer interface prefixes
+    match:
+    - ip address prefix-list PL-WAN-HA-PEER-PREFIXES
+  - sequence: 20
+    type: permit
+    description: Allow prefixes originated from the HA peer
+    match:
+    - extcommunity ECL-EVPN-SOO
+    set:
+    - as-path match all replacement auto auto
+  - sequence: 30
+    type: permit
+    description: Use WAN routes from HA peer as backup
+    match:
+    - as-path ASPATH-WAN
+    set:
+    - community no-advertise
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
   - sequence: 10
@@ -216,6 +314,11 @@ route_maps:
     description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
+  - sequence: 30
+    type: permit
+    description: Advertise WAN HA prefixes towards LAN
+    match:
+    - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-EVPN-SOO-IN
   sequence_numbers:
   - sequence: 10
@@ -229,7 +332,7 @@ route_maps:
   - sequence: 10
     type: permit
     set:
-    - extcommunity soo 192.168.43.1:422 additive
+    - extcommunity soo 192.168.42.2:423 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
@@ -254,11 +357,13 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.43.1:422
+    extcommunities: soo 192.168.42.2:423
 ip_security:
   ike_policies:
+  - name: DP-IKE-POLICY
+    local_id: 192.168.142.2
   - name: CP-IKE-POLICY
-    local_id: 192.168.143.1
+    local_id: 192.168.142.2
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -270,6 +375,7 @@ ip_security:
     pfs_dh_group: 14
   profiles:
   - name: DP-PROFILE
+    ike_policy: DP-IKE-POLICY
     sa_policy: DP-SA-POLICY
     connection: start
     shared_key: ABCDEF1234567890666
@@ -291,7 +397,7 @@ ip_security:
   key_controller:
     profile: DP-PROFILE
 router_adaptive_virtual_topology:
-  topology_role: transit region
+  topology_role: edge
   region:
     name: AVD_Land_West
     id: 42
@@ -299,8 +405,8 @@ router_adaptive_virtual_topology:
     name: DEFAULT-ZONE
     id: 1
   site:
-    name: Site422
-    id: 422
+    name: Site423
+    id: 423
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
@@ -314,10 +420,6 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-DEFAULT-AVT-POLICY-VIDEO
   - name: DEFAULT-AVT-POLICY-DEFAULT
     load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
-  - name: TRANSIT-AVT-POLICY-VOICE
-    load_balance_policy: LB-TRANSIT-AVT-POLICY-VOICE
-  - name: TRANSIT-AVT-POLICY-DEFAULT
-    load_balance_policy: LB-TRANSIT-AVT-POLICY-DEFAULT
   vrfs:
   - name: default
     policy: DEFAULT-AVT-POLICY-WITH-CP
@@ -344,13 +446,6 @@ router_adaptive_virtual_topology:
       id: 3
     - name: DEFAULT-AVT-POLICY-DEFAULT
       id: 1
-  - name: TRANSIT
-    policy: TRANSIT-AVT-POLICY
-    profiles:
-    - name: TRANSIT-AVT-POLICY-VOICE
-      id: 42
-    - name: TRANSIT-AVT-POLICY-DEFAULT
-      id: 1
   policies:
   - name: PROD-AVT-POLICY
     matches:
@@ -366,12 +461,6 @@ router_adaptive_virtual_topology:
       avt_profile: DEFAULT-AVT-POLICY-VIDEO
     - application_profile: default
       avt_profile: DEFAULT-AVT-POLICY-DEFAULT
-  - name: TRANSIT-AVT-POLICY
-    matches:
-    - application_profile: VOICE
-      avt_profile: TRANSIT-AVT-POLICY-VOICE
-    - application_profile: default
-      avt_profile: TRANSIT-AVT-POLICY-DEFAULT
   - name: DEFAULT-AVT-POLICY-WITH-CP
     matches:
     - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
@@ -392,7 +481,7 @@ router_path_selection:
   - name: INET
     id: 101
     local_interfaces:
-    - name: Ethernet1.42
+    - name: Ethernet1
       stun:
         server_profiles:
         - INET-cv-pathfinder-pathfinder-Ethernet1
@@ -406,61 +495,48 @@ router_path_selection:
       - 10.7.7.7
       - 10.9.9.9
     ipsec_profile: CP-PROFILE
-  - name: MPLS
-    id: 100
+  - name: LAN_HA
+    id: 65535
+    flow_assignment: lan
     local_interfaces:
-    - name: Ethernet2.42
-      stun:
-        server_profiles:
-        - MPLS-cv-pathfinder-pathfinder-Ethernet2
-    dynamic_peers:
-      enabled: true
+    - name: Ethernet52
+    - name: Ethernet53
     static_peers:
-    - router_ip: 192.168.144.1
-      name: cv-pathfinder-pathfinder
+    - router_ip: 192.168.142.3
+      name: LAN_HA
       ipv4_addresses:
-      - 172.16.0.1
+      - 172.17.0.9
+      - 172.17.0.11
+    ipsec_profile: DP-PROFILE
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
+    - name: LAN_HA
     - name: INET
-    - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
-    - name: MPLS
+    - name: LAN_HA
     - name: INET
       priority: 2
     jitter: 42
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
-    - name: MPLS
+    - name: LAN_HA
     - name: INET
       priority: 2
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
-    - name: MPLS
-      priority: 2
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
-    - name: MPLS
+    - name: LAN_HA
     - name: INET
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
+    - name: LAN_HA
     - name: INET
-    - name: MPLS
-      priority: 42
-  - name: LB-TRANSIT-AVT-POLICY-VOICE
-    path_groups:
-    - name: MPLS
-    - name: INET
-      priority: 2
-  - name: LB-TRANSIT-AVT-POLICY-DEFAULT
-    path_groups:
-    - name: INET
-    - name: MPLS
-      priority: 2
 router_traffic_engineering:
   enabled: true
 stun:
@@ -470,8 +546,6 @@ stun:
       ip_address: 10.7.7.7
     - name: INET-cv-pathfinder-pathfinder-Ethernet3
       ip_address: 10.9.9.9
-    - name: MPLS-cv-pathfinder-pathfinder-Ethernet2
-      ip_address: 172.16.0.1
 application_traffic_recognition:
   application_profiles:
   - name: VOICE
@@ -528,12 +602,12 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.143.1/32
+  ip_address: 192.168.142.2/32
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
-    description: cv-pathfinder-transit_VTEP
+    description: cv-pathfinder-edge2A_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
@@ -544,41 +618,44 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
-      - name: TRANSIT
-        vni: 66
 metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: transit region
+      value: edge
     - name: Region
       value: AVD_Land_West
     - name: Zone
       value: DEFAULT-ZONE
     - name: Site
-      value: Site422
+      value: Site423
     interface_tags:
+    - interface: Ethernet52
+      tags:
+      - name: Type
+        value: lan
+    - interface: Ethernet53
+      tags:
+      - name: Type
+        value: lan
     - interface: Ethernet1
       tags:
       - name: Type
-        value: lan
-    - interface: Ethernet2
-      tags:
-      - name: Type
-        value: lan
+        value: wan
+      - name: Carrier
+        value: ATT
+      - name: Circuit
+        value: 423-01
   cv_pathfinder:
-    role: transit region
-    vtep_ip: 192.168.143.1
+    role: edge
+    vtep_ip: 192.168.142.2
     region: AVD_Land_West
     zone: DEFAULT-ZONE
-    site: Site422
+    site: Site423
     interfaces:
-    - name: Ethernet1.42
-      carrier: Comcast
+    - name: Ethernet1
+      carrier: ATT
+      circuit_id: 423-01
       pathgroup: INET
-    - name: Ethernet2.42
-      carrier: Colt
-      circuit_id: '10666'
-      pathgroup: MPLS
     pathfinders:
     - vtep_ip: 192.168.144.1
