--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -1,8 +1,8 @@
-hostname: cv-pathfinder-edge3
+hostname: cv-pathfinder-transit1A
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.42.3
+  router_id: 192.168.43.1
   bgp:
     default:
       ipv4_unicast: false
@@ -29,6 +29,10 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 1
+    bfd_timers:
+      interval: 1000
+      min_rx: 1000
+      multiplier: 10
   address_family_ipv4:
     peer_groups:
     - name: IPv4-UNDERLAY-PEERS
@@ -39,33 +43,24 @@ router_bgp:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
   neighbors:
-  - ip_address: 172.17.0.8
+  - ip_address: 172.17.0.0
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
     peer: site-ha-enabled-leaf1
-    description: site-ha-enabled-leaf1_Ethernet2
-  - ip_address: 172.17.0.10
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
-    peer: site-ha-enabled-leaf2
-    description: site-ha-enabled-leaf2_Ethernet2
+    description: site-ha-enabled-leaf1_Ethernet1
   - ip_address: 192.168.144.1
     peer_group: WAN-OVERLAY-PEERS
     peer: cv-pathfinder-pathfinder
     description: cv-pathfinder-pathfinder
   vrfs:
   - name: IT
-    router_id: 192.168.42.3
+    router_id: 192.168.43.1
     neighbors:
-    - ip_address: 172.17.0.8
+    - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
-    - ip_address: 172.17.0.10
-      peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
-      description: site-ha-enabled-leaf2_Ethernet2.100_vrf_IT
-    rd: 192.168.42.3:100
+      description: site-ha-enabled-leaf1_Ethernet1.100_vrf_IT
+    rd: 192.168.43.1:100
     route_targets:
       import:
       - address_family: evpn
@@ -78,17 +73,13 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
-    router_id: 192.168.42.3
+    router_id: 192.168.43.1
     neighbors:
-    - ip_address: 172.17.0.8
+    - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
-    - ip_address: 172.17.0.10
-      peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
-      description: site-ha-enabled-leaf2_Ethernet2.42_vrf_PROD
-    rd: 192.168.42.3:42
+      description: site-ha-enabled-leaf1_Ethernet1.42_vrf_PROD
+    rd: 192.168.43.1:42
     route_targets:
       import:
       - address_family: evpn
@@ -101,7 +92,7 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: default
-    rd: 192.168.42.3:1
+    rd: 192.168.43.1:1
     route_targets:
       import:
       - address_family: evpn
@@ -112,6 +103,20 @@ router_bgp:
         route_targets:
         - '1:1'
         - route-map RM-EVPN-EXPORT-VRF-DEFAULT
+  - name: TRANSIT
+    router_id: 192.168.43.1
+    rd: 192.168.43.1:66
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 66:66
+      export:
+      - address_family: evpn
+        route_targets:
+        - 66:66
+    redistribute_routes:
+    - source_protocol: connected
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -140,11 +145,7 @@ router_bgp:
           any: true
 service_routing_protocols_model: multi-agent
 ip_routing: true
-vlan_internal_order:
-  allocation: ascending
-  range:
-    beginning: 1006
-    ending: 1199
+transceiver_qsfp_default_mode_4x10: false
 spanning_tree:
   mode: none
 vrfs:
@@ -156,6 +157,9 @@ vrfs:
 - name: PROD
   tenant: TenantA
   ip_routing: true
+- name: TRANSIT
+  tenant: TenantB
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
@@ -163,82 +167,67 @@ management_api_http:
 ethernet_interfaces:
 - name: Ethernet52
   peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2
+  peer_interface: Ethernet1
   peer_type: l3leaf
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.9/31
+  ip_address: 172.17.0.1/31
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 - name: Ethernet52.100
   peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2.100
+  peer_interface: Ethernet1.100
   peer_type: l3leaf
   vrf: IT
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.100_vrf_IT
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.9/31
+  ip_address: 172.17.0.1/31
 - name: Ethernet52.42
   peer: site-ha-enabled-leaf1
-  peer_interface: Ethernet2.42
+  peer_interface: Ethernet1.42
   peer_type: l3leaf
   vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet2.42_vrf_PROD
+  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.9/31
-- name: Ethernet53
-  peer: site-ha-enabled-leaf2
-  peer_interface: Ethernet2
-  peer_type: l3leaf
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2
-  shutdown: false
-  mtu: 9214
-  type: routed
-  ip_address: 172.17.0.11/31
-  flow_tracker:
-    hardware: WAN-FLOW-TRACKER
-- name: Ethernet53.100
-  peer: site-ha-enabled-leaf2
-  peer_interface: Ethernet2.100
-  peer_type: l3leaf
-  vrf: IT
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2.100_vrf_IT
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 100
-  mtu: 9214
-  ip_address: 172.17.0.11/31
-- name: Ethernet53.42
-  peer: site-ha-enabled-leaf2
-  peer_interface: Ethernet2.42
-  peer_type: l3leaf
-  vrf: PROD
-  description: P2P_LINK_TO_SITE-HA-ENABLED-LEAF2_Ethernet2.42_vrf_PROD
-  shutdown: false
-  type: l3dot1q
-  encapsulation_dot1q_vlan: 42
-  mtu: 9214
-  ip_address: 172.17.0.11/31
-- name: Ethernet2
+  ip_address: 172.17.0.1/31
+- name: Ethernet1.42
   peer_type: l3_interface
-  ip_address: 172.15.6.6/31
+  ip_address: dhcp
   shutdown: false
-  type: routed
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 42
+  dhcp_client_accept_default_route: true
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
+- name: Ethernet2.42
+  peer_type: l3_interface
+  ip_address: 172.16.6.6/31
+  shutdown: false
+  type: l3dot1q
+  encapsulation_dot1q_vlan: 666
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
+- name: Ethernet1
+  type: routed
+  peer_type: l3_interface
+  shutdown: false
+- name: Ethernet2
+  type: routed
+  peer_type: l3_interface
+  shutdown: false
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
   shutdown: false
-  ip_address: 192.168.42.3/32
+  ip_address: 192.168.43.1/32
 as_path:
   access_lists:
   - name: ASPATH-WAN
@@ -249,19 +238,15 @@ prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
   - sequence: 10
-    action: permit 192.168.42.0/24 eq 32
+    action: permit 192.168.43.0/24 eq 32
 - name: PL-WAN-HA-PREFIXES
   sequence_numbers:
   - sequence: 10
-    action: permit 172.17.0.8/31
-  - sequence: 20
-    action: permit 172.17.0.10/31
+    action: permit 172.17.0.0/31
 - name: PL-WAN-HA-PEER-PREFIXES
   sequence_numbers:
   - sequence: 10
-    action: permit 172.17.0.4/31
-  - sequence: 20
-    action: permit 172.17.0.6/31
+    action: permit 172.17.0.2/31
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -270,7 +255,7 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.42.2:423 additive
+    - extcommunity soo 192.168.43.1:422 additive
   - sequence: 50
     type: permit
     match:
@@ -281,7 +266,7 @@ route_maps:
     type: permit
     description: Mark prefixes originated from the LAN
     set:
-    - extcommunity soo 192.168.42.2:423 additive
+    - extcommunity soo 192.168.43.1:422 additive
   - sequence: 10
     type: permit
     description: Allow WAN HA peer interface prefixes
@@ -331,7 +316,7 @@ route_maps:
   - sequence: 10
     type: permit
     set:
-    - extcommunity soo 192.168.42.2:423 additive
+    - extcommunity soo 192.168.43.1:422 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
@@ -356,13 +341,13 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.42.2:423
+    extcommunities: soo 192.168.43.1:422
 ip_security:
   ike_policies:
   - name: DP-IKE-POLICY
-    local_id: 192.168.142.3
+    local_id: 192.168.143.1
   - name: CP-IKE-POLICY
-    local_id: 192.168.142.3
+    local_id: 192.168.143.1
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -396,7 +381,7 @@ ip_security:
   key_controller:
     profile: DP-PROFILE
 router_adaptive_virtual_topology:
-  topology_role: edge
+  topology_role: transit region
   region:
     name: AVD_Land_West
     id: 42
@@ -404,8 +389,8 @@ router_adaptive_virtual_topology:
     name: DEFAULT-ZONE
     id: 1
   site:
-    name: Site423
-    id: 423
+    name: Site422
+    id: 422
   profiles:
   - name: CONTROL-PLANE-PROFILE
     load_balance_policy: LB-CONTROL-PLANE-PROFILE
@@ -419,6 +404,10 @@ router_adaptive_virtual_topology:
     load_balance_policy: LB-DEFAULT-AVT-POLICY-VIDEO
   - name: DEFAULT-AVT-POLICY-DEFAULT
     load_balance_policy: LB-DEFAULT-AVT-POLICY-DEFAULT
+  - name: TRANSIT-AVT-POLICY-VOICE
+    load_balance_policy: LB-TRANSIT-AVT-POLICY-VOICE
+  - name: TRANSIT-AVT-POLICY-DEFAULT
+    load_balance_policy: LB-TRANSIT-AVT-POLICY-DEFAULT
   vrfs:
   - name: default
     policy: DEFAULT-AVT-POLICY-WITH-CP
@@ -445,6 +434,13 @@ router_adaptive_virtual_topology:
       id: 3
     - name: DEFAULT-AVT-POLICY-DEFAULT
       id: 1
+  - name: TRANSIT
+    policy: TRANSIT-AVT-POLICY
+    profiles:
+    - name: TRANSIT-AVT-POLICY-VOICE
+      id: 42
+    - name: TRANSIT-AVT-POLICY-DEFAULT
+      id: 1
   policies:
   - name: PROD-AVT-POLICY
     matches:
@@ -460,6 +456,12 @@ router_adaptive_virtual_topology:
       avt_profile: DEFAULT-AVT-POLICY-VIDEO
     - application_profile: default
       avt_profile: DEFAULT-AVT-POLICY-DEFAULT
+  - name: TRANSIT-AVT-POLICY
+    matches:
+    - application_profile: VOICE
+      avt_profile: TRANSIT-AVT-POLICY-VOICE
+    - application_profile: default
+      avt_profile: TRANSIT-AVT-POLICY-DEFAULT
   - name: DEFAULT-AVT-POLICY-WITH-CP
     matches:
     - application_profile: CONTROL-PLANE-APPLICATION-PROFILE
@@ -477,10 +479,27 @@ router_path_selection:
   tcp_mss_ceiling:
     ipv4_segment_size: auto
   path_groups:
+  - name: INET
+    id: 101
+    local_interfaces:
+    - name: Ethernet1.42
+      stun:
+        server_profiles:
+        - INET-cv-pathfinder-pathfinder-Ethernet1
+        - INET-cv-pathfinder-pathfinder-Ethernet3
+    dynamic_peers:
+      enabled: true
+    static_peers:
+    - router_ip: 192.168.144.1
+      name: cv-pathfinder-pathfinder
+      ipv4_addresses:
+      - 10.7.7.7
+      - 10.9.9.9
+    ipsec_profile: CP-PROFILE
   - name: MPLS
     id: 100
     local_interfaces:
-    - name: Ethernet2
+    - name: Ethernet2.42
       stun:
         server_profiles:
         - MPLS-cv-pathfinder-pathfinder-Ethernet2
@@ -496,48 +515,69 @@ router_path_selection:
     flow_assignment: lan
     local_interfaces:
     - name: Ethernet52
-    - name: Ethernet53
     static_peers:
-    - router_ip: 192.168.142.2
+    - router_ip: 192.168.143.2
       name: LAN_HA
       ipv4_addresses:
-      - 172.17.0.5
-      - 172.17.0.7
-    ipsec_profile: DP-PROFILE
+      - 172.17.0.3
   load_balance_policies:
   - name: LB-CONTROL-PLANE-PROFILE
     path_groups:
     - name: LAN_HA
+    - name: INET
     - name: MPLS
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
     - name: LAN_HA
     - name: MPLS
+    - name: INET
+      priority: 2
     jitter: 42
   - name: LB-PROD-AVT-POLICY-VIDEO
     path_groups:
     - name: LAN_HA
     - name: MPLS
+    - name: INET
+      priority: 2
     loss_rate: '42.0'
   - name: LB-PROD-AVT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
+    - name: INET
     - name: MPLS
       priority: 2
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
     - name: LAN_HA
     - name: MPLS
+    - name: INET
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
+    - name: INET
     - name: MPLS
       priority: 42
+  - name: LB-TRANSIT-AVT-POLICY-VOICE
+    path_groups:
+    - name: LAN_HA
+    - name: MPLS
+    - name: INET
+      priority: 2
+  - name: LB-TRANSIT-AVT-POLICY-DEFAULT
+    path_groups:
+    - name: LAN_HA
+    - name: INET
+    - name: MPLS
+      priority: 2
 router_traffic_engineering:
   enabled: true
 stun:
   client:
     server_profiles:
+    - name: INET-cv-pathfinder-pathfinder-Ethernet1
+      ip_address: 10.7.7.7
+    - name: INET-cv-pathfinder-pathfinder-Ethernet3
+      ip_address: 10.9.9.9
     - name: MPLS-cv-pathfinder-pathfinder-Ethernet2
       ip_address: 172.16.0.1
 application_traffic_recognition:
@@ -596,12 +636,12 @@ dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9214
-  ip_address: 192.168.142.3/32
+  ip_address: 192.168.143.1/32
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
-    description: cv-pathfinder-edge3_VTEP
+    description: cv-pathfinder-transit1A_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
@@ -612,44 +652,45 @@ vxlan_interface:
         vni: 100
       - name: PROD
         vni: 42
+      - name: TRANSIT
+        vni: 66
 metadata:
   cv_tags:
     device_tags:
     - name: Role
-      value: edge
+      value: transit region
     - name: Region
       value: AVD_Land_West
     - name: Zone
       value: DEFAULT-ZONE
     - name: Site
-      value: Site423
+      value: Site422
     interface_tags:
     - interface: Ethernet52
       tags:
       - name: Type
         value: lan
-    - interface: Ethernet53
+    - interface: Ethernet1
       tags:
       - name: Type
         value: lan
     - interface: Ethernet2
       tags:
       - name: Type
-        value: wan
-      - name: Carrier
-        value: Colt
-      - name: Circuit
-        value: '10423'
+        value: lan
   cv_pathfinder:
-    role: edge
-    vtep_ip: 192.168.142.3
+    role: transit region
+    vtep_ip: 192.168.143.1
     region: AVD_Land_West
     zone: DEFAULT-ZONE
-    site: Site423
+    site: Site422
     interfaces:
-    - name: Ethernet2
+    - name: Ethernet1.42
+      carrier: Comcast
+      pathgroup: INET
+    - name: Ethernet2.42
       carrier: Colt
-      circuit_id: '10423'
+      circuit_id: '10666'
       pathgroup: MPLS
     pathfinders:
     - vtep_ip: 192.168.144.1
