--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-enabled-leaf1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-enabled-leaf1.yml
@@ -33,28 +33,28 @@ router_bgp:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
   neighbors:
-  - ip_address: 172.17.0.5
+  - ip_address: 172.17.0.1
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: cv-pathfinder-edge2
-    description: cv-pathfinder-edge2_Ethernet52
-  - ip_address: 172.17.0.9
+    peer: cv-pathfinder-transit1A
+    description: cv-pathfinder-transit1A_Ethernet52
+  - ip_address: 172.17.0.3
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: cv-pathfinder-edge3
-    description: cv-pathfinder-edge3_Ethernet52
+    peer: cv-pathfinder-transit1B
+    description: cv-pathfinder-transit1B_Ethernet52
   vrfs:
   - name: IT
     router_id: 192.168.45.1
     neighbors:
-    - ip_address: 172.17.0.5
+    - ip_address: 172.17.0.1
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge2_Ethernet52.100_vrf_IT
-    - ip_address: 172.17.0.9
+      description: cv-pathfinder-transit1A_Ethernet52.100_vrf_IT
+    - ip_address: 172.17.0.3
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge3_Ethernet52.100_vrf_IT
+      description: cv-pathfinder-transit1B_Ethernet52.100_vrf_IT
     rd: 192.168.45.1:100
     route_targets:
       import:
@@ -70,14 +70,14 @@ router_bgp:
   - name: PROD
     router_id: 192.168.45.1
     neighbors:
-    - ip_address: 172.17.0.5
+    - ip_address: 172.17.0.1
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge2_Ethernet52.42_vrf_PROD
-    - ip_address: 172.17.0.9
+      description: cv-pathfinder-transit1A_Ethernet52.42_vrf_PROD
+    - ip_address: 172.17.0.3
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge3_Ethernet52.42_vrf_PROD
+      description: cv-pathfinder-transit1B_Ethernet52.42_vrf_PROD
     rd: 192.168.45.1:42
     route_targets:
       import:
@@ -144,67 +144,67 @@ management_api_http:
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet1
-  peer: cv-pathfinder-edge2
+  peer: cv-pathfinder-transit1A
   peer_interface: Ethernet52
-  peer_type: wan_edge
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2_Ethernet52
+  peer_type: wan_transit
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.4/31
+  ip_address: 172.17.0.0/31
 - name: Ethernet1.100
-  peer: cv-pathfinder-edge2
+  peer: cv-pathfinder-transit1A
   peer_interface: Ethernet52.100
-  peer_type: wan_edge
+  peer_type: wan_transit
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.4/31
+  ip_address: 172.17.0.0/31
 - name: Ethernet1.42
-  peer: cv-pathfinder-edge2
+  peer: cv-pathfinder-transit1A
   peer_interface: Ethernet52.42
-  peer_type: wan_edge
+  peer_type: wan_transit
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1A_Ethernet52.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.4/31
+  ip_address: 172.17.0.0/31
 - name: Ethernet2
-  peer: cv-pathfinder-edge3
+  peer: cv-pathfinder-transit1B
   peer_interface: Ethernet52
-  peer_type: wan_edge
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE3_Ethernet52
+  peer_type: wan_transit
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.8/31
+  ip_address: 172.17.0.2/31
 - name: Ethernet2.100
-  peer: cv-pathfinder-edge3
+  peer: cv-pathfinder-transit1B
   peer_interface: Ethernet52.100
-  peer_type: wan_edge
+  peer_type: wan_transit
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE3_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.8/31
+  ip_address: 172.17.0.2/31
 - name: Ethernet2.42
-  peer: cv-pathfinder-edge3
+  peer: cv-pathfinder-transit1B
   peer_interface: Ethernet52.42
-  peer_type: wan_edge
+  peer_type: wan_transit
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE3_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-TRANSIT1B_Ethernet52.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.8/31
+  ip_address: 172.17.0.2/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
