--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-enabled-leaf2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/site-ha-enabled-leaf2A.yml
@@ -1,8 +1,8 @@
-hostname: site-ha-disabled-leaf
+hostname: site-ha-enabled-leaf2A
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.45.4
+  router_id: 192.168.45.2
   bgp:
     default:
       ipv4_unicast: false
@@ -33,29 +33,29 @@ router_bgp:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
   neighbors:
-  - ip_address: 172.17.0.1
+  - ip_address: 172.17.0.5
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: cv-pathfinder-edge
-    description: cv-pathfinder-edge_Ethernet52
-  - ip_address: 172.17.0.3
+    peer: cv-pathfinder-edge2A
+    description: cv-pathfinder-edge2A_Ethernet52
+  - ip_address: 172.17.0.9
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65000'
-    peer: cv-pathfinder-edge-no-common-path-group
-    description: cv-pathfinder-edge-no-common-path-group_Ethernet52
+    peer: cv-pathfinder-edge2B
+    description: cv-pathfinder-edge2B_Ethernet52
   vrfs:
   - name: IT
-    router_id: 192.168.45.4
+    router_id: 192.168.45.2
     neighbors:
-    - ip_address: 172.17.0.1
+    - ip_address: 172.17.0.5
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge_Ethernet52.100_vrf_IT
-    - ip_address: 172.17.0.3
+      description: cv-pathfinder-edge2A_Ethernet52.100_vrf_IT
+    - ip_address: 172.17.0.9
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.100_vrf_IT
-    rd: 192.168.45.4:100
+      description: cv-pathfinder-edge2B_Ethernet52.100_vrf_IT
+    rd: 192.168.45.2:100
     route_targets:
       import:
       - address_family: evpn
@@ -68,17 +68,17 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: PROD
-    router_id: 192.168.45.4
+    router_id: 192.168.45.2
     neighbors:
-    - ip_address: 172.17.0.1
+    - ip_address: 172.17.0.5
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge_Ethernet52.42_vrf_PROD
-    - ip_address: 172.17.0.3
+      description: cv-pathfinder-edge2A_Ethernet52.42_vrf_PROD
+    - ip_address: 172.17.0.9
       peer_group: IPv4-UNDERLAY-PEERS
       remote_as: '65000'
-      description: cv-pathfinder-edge-no-common-path-group_Ethernet52.42_vrf_PROD
-    rd: 192.168.45.4:42
+      description: cv-pathfinder-edge2B_Ethernet52.42_vrf_PROD
+    rd: 192.168.45.2:42
     route_targets:
       import:
       - address_family: evpn
@@ -91,7 +91,7 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
   - name: default
-    rd: 192.168.45.4:1
+    rd: 192.168.45.2:1
     route_targets:
       import:
       - address_family: evpn
@@ -108,7 +108,7 @@ router_bgp:
   vlans:
   - id: 100
     tenant: TenantA
-    rd: 192.168.45.4:1100
+    rd: 192.168.45.2:1100
     route_targets:
       both:
       - 1100:1100
@@ -116,7 +116,7 @@ router_bgp:
     - learned
   - id: 101
     tenant: TenantA
-    rd: 192.168.45.4:1101
+    rd: 192.168.45.2:1101
     route_targets:
       both:
       - 1101:1101
@@ -144,76 +144,76 @@ management_api_http:
   enable_https: true
 ethernet_interfaces:
 - name: Ethernet1
-  peer: cv-pathfinder-edge
+  peer: cv-pathfinder-edge2A
   peer_interface: Ethernet52
   peer_type: wan_edge
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet52
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.0/31
+  ip_address: 172.17.0.4/31
 - name: Ethernet1.100
-  peer: cv-pathfinder-edge
+  peer: cv-pathfinder-edge2A
   peer_interface: Ethernet52.100
   peer_type: wan_edge
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet52.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.0/31
+  ip_address: 172.17.0.4/31
 - name: Ethernet1.42
-  peer: cv-pathfinder-edge
+  peer: cv-pathfinder-edge2A
   peer_interface: Ethernet52.42
   peer_type: wan_edge
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2A_Ethernet52.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.0/31
+  ip_address: 172.17.0.4/31
 - name: Ethernet2
-  peer: cv-pathfinder-edge-no-common-path-group
+  peer: cv-pathfinder-edge2B
   peer_interface: Ethernet52
   peer_type: wan_edge
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet52
   shutdown: false
   mtu: 9214
   type: routed
-  ip_address: 172.17.0.2/31
+  ip_address: 172.17.0.8/31
 - name: Ethernet2.100
-  peer: cv-pathfinder-edge-no-common-path-group
+  peer: cv-pathfinder-edge2B
   peer_interface: Ethernet52.100
   peer_type: wan_edge
   vrf: IT
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.100_vrf_IT
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet52.100_vrf_IT
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 100
   mtu: 9214
-  ip_address: 172.17.0.2/31
+  ip_address: 172.17.0.8/31
 - name: Ethernet2.42
-  peer: cv-pathfinder-edge-no-common-path-group
+  peer: cv-pathfinder-edge2B
   peer_interface: Ethernet52.42
   peer_type: wan_edge
   vrf: PROD
-  description: P2P_LINK_TO_CV-PATHFINDER-EDGE-NO-COMMON-PATH-GROUP_Ethernet52.42_vrf_PROD
+  description: P2P_LINK_TO_CV-PATHFINDER-EDGE2B_Ethernet52.42_vrf_PROD
   shutdown: false
   type: l3dot1q
   encapsulation_dot1q_vlan: 42
   mtu: 9214
-  ip_address: 172.17.0.2/31
+  ip_address: 172.17.0.8/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
   shutdown: false
-  ip_address: 192.168.45.4/32
+  ip_address: 192.168.45.2/32
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
-  ip_address: 192.168.255.4/32
+  ip_address: 192.168.255.2/32
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -252,7 +252,7 @@ vlan_interfaces:
   vrf: PROD
 vxlan_interface:
   Vxlan1:
-    description: site-ha-disabled-leaf_VTEP
+    description: site-ha-enabled-leaf2A_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Loopback1
