--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -14,10 +14,12 @@ interface Management1
 !
 monitor telemetry postcard policy
    no disabled
-   ingress collection gre source 10.3.3.3 10.3.3.4
+   ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
    ingress sample rate 16384
    ingress sample tcp-udp-checksum 2343223
    profile abc
+      ingress sample policy ingresspo1
+   profile def
       ingress sample policy ingresspo1
    sample policy samplepo1
       match rule rule1 ipv4
@@ -26,6 +28,22 @@ monitor telemetry postcard policy
          protocol tcp destination port www
          protocol tcp destination port 78-80
          protocol tcp destination port 77
- 
+      match rule rule2 ipv4
+         destination prefix 10.3.4.0/24
+         source prefix 3.4.4.0/24
+         protocol tcp destination port ssh
+         protocol tcp destination port 748-800
+         protocol tcp destination port 747
+   sample policy samplepo2
+      match rule rule1 ipv4
+         destination prefix 10.3.3.0/24
+         source prefix 3.4.5.0/24
+         protocol tcp destination port www
+         protocol tcp destination port 78-80
+         protocol tcp destination port 77
+   sample policy samplepo3
+      match ipv4-all-default ipv4
+      !
+      match ipv6-all-default ipv6
 !
 end
