Removing CIR and refactoring the schema and template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/policy-maps.cfg
@@ -23,7 +23,7 @@ policy-map type quality-of-service PM_REPLICATION_LD
       set dscp af11
       set traffic-class 2
       set drop-precedence 1
-      police rate 10 kbps burst-size 260 kbytes action set drop-precedence rate 30 kbps 270 kbytes
+      police rate 10 kbps burst-size 260 kbytes action set drop-precedence rate 30 kbps burst-size 270 kbytes
    !
    class CM_REPLICATION_LD_2
       set dscp af11
@@ -33,7 +33,7 @@ policy-map type quality-of-service PM_REPLICATION_LD2
    class CM_REPLICATION_LD
       set dscp af11
       set cos 4
-      police cir 12 bps bc 267 kbytes
+      police rate 30 kbps burst-size 280 bytes rate 20 kbps burst-size 270 bytes
 !
 policy-map type quality-of-service PM_REPLICATION_LD3
    class CM_REPLICATION_LD
