--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-telemetry-postcard.cfg
@@ -17,9 +17,9 @@ monitor telemetry postcard policy
    ingress collection gre source 10.3.3.3 destination 10.3.3.4 version 2
    ingress sample rate 16384
    ingress sample tcp-udp-checksum 2343223
-   profile abc
+   profile profile1
       ingress sample policy ingresspo1
-   profile def
+   profile profile2
       ingress sample policy ingresspo1
    sample policy samplepo1
       match rule rule1 ipv4
@@ -28,19 +28,19 @@ monitor telemetry postcard policy
          protocol tcp destination port www
          protocol tcp destination port 78-80
          protocol tcp destination port 77
-      match rule rule2 ipv4
+      match rule rule2 ipv6
          destination prefix 10.3.4.0/24
          source prefix 3.4.4.0/24
-         protocol tcp destination port ssh
-         protocol tcp destination port 748-800
-         protocol tcp destination port 747
+         protocol udp destination port ssh
+         protocol udp destination port 748-800
+         protocol udp destination port 747
    sample policy samplepo2
       match rule rule1 ipv4
          destination prefix 10.3.3.0/24
          source prefix 3.4.5.0/24
-         protocol tcp destination port www
-         protocol tcp destination port 78-80
-         protocol tcp destination port 77
+         protocol udp destination port www
+         protocol udp destination port 78-80
+         protocol udp destination port 77
    sample policy samplepo3
       match ipv4-all-default ipv4
       !
